Thu Mar  5 16:56:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tmpdir.rb (Dir.tmpdir): not use USERPROFILE, and ignores
	  non-existent directory.

Thu Mar  5 14:52:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_sysinit): initializes version info first.

	* win32/win32.c (rb_w32_osid): always define for binary compatibility.

Thu Mar  5 11:52:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (make_insns_rules): rule to make rules for insns.

Thu Mar  5 11:27:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (miniruby.exe): workaround for a failure of
	  mt.exe on Windows 7 beta.  [ruby-talk:330284]

Thu Mar  5 10:32:17 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/dl/test_base.rb: Add dragonfly to libc and libm switch.

Thu Mar  5 10:29:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_eql): extracted from rb_str_equal and rb_str_eql.

	* string.c (rb_str_chomp_bang): keeps 7bit coderange.

Thu Mar  5 10:10:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/encoding.h (enc_initialized_p): ENC_UNINITIALIZED
	  is not defined already.

	* include/ruby/encoding.h (ENC_FROM_ENCINDEX): removed because
	  depending on a static variable.

Thu Mar  5 04:42:52 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_array.rb: fix wrong test, and add a test for
	  sort_by!.

Thu Mar  5 04:32:38 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_array.rb: add some tests for coverage.

Thu Mar  5 00:06:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/README.win32 (Requirement): added unicows.lib and dll.

Wed Mar  4 23:29:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, win32/configure.bat (--enable-win95): new option
	  to enable/disable win95 support.

Wed Mar  4 21:21:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/thread.rb (SizedQueue#push): fix limit condition.
	  [ruby-dev:38135]
